Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37379

Assertion `index->is_readable()' failed in dict_create_index_tree_in_mem on REPLACE DELAYED

    XMLWordPrintable

Details

    • Not for Release Notes
    • Q4/2025 Server Maintenance

    Description

      --source include/have_innodb.inc
      CREATE GLOBAL TEMPORARY TABLE t (c INT) ENGINE=InnoDB;
      REPLACE DELAYED t VALUES (0);
      

      Leads to:

      MDEV-35915 ES 11.8.3-1 267fc98bf48033db5cf8b3bbffd9d3aea4e9ea8e (Optimized, Clang) Build 31/07/2025

      11.8.3-opt>REPLACE DELAYED t VALUES (0);
      ERROR 1616 (HY000): DELAYED option not supported for table 't'
      

      On optimized ES 11.8/CS 12.0 builds. However on debug builds we see:

      MDEV-35915 ES 11.8.3-1 267fc98bf48033db5cf8b3bbffd9d3aea4e9ea8e (Debug, Clang) Build 31/07/2025

      mariadbd: /test/11.8-enterprise-global-tmp_dbg/storage/innobase/dict/dict0crea.cc:824: dberr_t dict_create_index_tree_in_mem(dict_index_t *, const trx_t *): Assertion `index->is_readable()' failed.
      

      MDEV-35915 ES 11.8.3-1 267fc98bf48033db5cf8b3bbffd9d3aea4e9ea8e (Debug, Clang) Build 31/07/2025

      Core was generated by `/test/MDEV-35915_EMD310725-mariadb-11.8.3-1-linux-x86_64-dbg/bin/mariadbd --no-'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
       
      [Current thread is 1 (LWP 2426664)]
      (gdb) bt
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
      #1  __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
      #2  __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ./nptl/pthread_kill.c:89
      #3  0x00007f299c84526e in __GI_raise (sig=sig@entry=6)at ../sysdeps/posix/raise.c:26
      #4  0x00007f299c8288ff in __GI_abort () at ./stdlib/abort.c:79
      #5  0x00007f299c82881b in __assert_fail_base (fmt=0x7f299c9d01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x60191bb82ad8 "index->is_readable()", file=file@entry=0x60191bb2f2a9 "/test/11.8-enterprise-global-tmp_dbg/storage/innobase/dict/dict0crea.cc", line=line@entry=824, function=function@entry=0x60191bb594e7 "dberr_t dict_create_index_tree_in_mem(dict_index_t *, const trx_t *)") at ./assert/assert.c:94
      #6  0x00007f299c83b507 in __assert_fail (assertion=0x60191bb82ad8 "index->is_readable()", file=0x60191bb2f2a9 "/test/11.8-enterprise-global-tmp_dbg/storage/innobase/dict/dict0crea.cc", line=824, function=0x60191bb594e7 "dberr_t dict_create_index_tree_in_mem(dict_index_t *, const trx_t *)") at ./assert/assert.c:103
      #7  0x000060191cee9f2c in dict_create_index_tree_in_mem (index=0x7f28dc00e2d8, trx=0x7f2999c02180)at /test/11.8-enterprise-global-tmp_dbg/storage/innobase/dict/dict0crea.cc:824
      #8  0x000060191d0bf4cf in row_create_index_for_mysql (index=0x7f28dc00e2d8, trx=0x7f2999c02180, field_lengths=0x0, mode=FIL_ENCRYPTION_DEFAULT, key_id=1)at /test/11.8-enterprise-global-tmp_dbg/storage/innobase/row/row0mysql.cc:2182
      #9  0x000060191cd104cc in create_table_info_t::create_table (this=0x7f29986e2ac8, create_fk=true, strict=true)at /test/11.8-enterprise-global-tmp_dbg/storage/innobase/handler/ha_innodb.cc:12793
      #10 0x000060191ccfc37d in ha_innobase::create (this=0x7f28dc00b6b8, name=0x7f29986e5cd0 "/test/MDEV-35915_EMD310725-mariadb-11.8.3-1-linux-x86_64-dbg/tmp/#sql-temptable-5872e-5-0", form=0x7f29986e3268, create_info=0x7f29986e5fc8, file_per_table=true, trx=0x7f2999c02180)at /test/11.8-enterprise-global-tmp_dbg/storage/innobase/handler/ha_innodb.cc:13284
      #11 0x000060191cd119a7 in ha_innobase::create (this=0x7f28dc00b6b8, name=0x7f29986e5cd0 "/test/MDEV-35915_EMD310725-mariadb-11.8.3-1-linux-x86_64-dbg/tmp/#sql-temptable-5872e-5-0", form=0x7f29986e3268, create_info=0x7f29986e5fc8)at /test/11.8-enterprise-global-tmp_dbg/storage/innobase/handler/ha_innodb.cc:13337
      #12 0x000060191c34110d in handler::ha_create (this=0x7f28dc00b6b8, name=0x7f29986e5cd0 "/test/MDEV-35915_EMD310725-mariadb-11.8.3-1-linux-x86_64-dbg/tmp/#sql-temptable-5872e-5-0", form=0x7f29986e3268, info_arg=0x7f29986e5fc8)at /test/11.8-enterprise-global-tmp_dbg/sql/handler.cc:5951
      #13 0x000060191c34320f in ha_create_table_from_share (thd=0x7f2848031398, share=0x7f29986e45f0, create_info=0x7f29986e5fc8, ref_length=0x7f29986e3754)at /test/11.8-enterprise-global-tmp_dbg/sql/handler.cc:6403
      #14 0x000060191c342aed in ha_create_table (thd=0x7f2848031398, path=0x7f29986e5cd0 "/test/MDEV-35915_EMD310725-mariadb-11.8.3-1-linux-x86_64-dbg/tmp/#sql-temptable-5872e-5-0", db=0x7f284802bdc8 "test", table_name=0x7f28480158f8 "t", create_info=0x7f29986e5fc8, frm=0x7f29986e5c60, skip_frm_file=false)at /test/11.8-enterprise-global-tmp_dbg/sql/handler.cc:6470
      #15 0x000060191c8ed3c1 in create_table_impl (thd=0x7f2848031398, ddl_log_state_create=0x0, ddl_log_state_rm=0x0, orig_db=@0x7f2848038300: {<Lex_ident_fs> = {<Lex_ident<Compare_table_names>> = {<Lex_cstring> = {<st_mysql_const_lex_string> = {str = 0x7f284802bdc8 "test", length = 4}, <No data fields>}, <No data fields>}, <No data fields>}, <No data fields>}, orig_table_name=@0x7f2848038310: {<Lex_ident_fs> = {<Lex_ident<Compare_table_names>> = {<Lex_cstring> = {<st_mysql_const_lex_string> = {str = 0x7f28480158f8 "t", length = 1}, <No data fields>}, <No data fields>}, <No data fields>}, <No data fields>}, db=@0x7f2848038300: {str = 0x7f284802bdc8 "test", length = 4}, table_name=@0x7f2848038310: {str = 0x7f28480158f8 "t", length = 1}, path=@0x7f29986e5c48: {str = 0x7f29986e5cd0 "/test/MDEV-35915_EMD310725-mariadb-11.8.3-1-linux-x86_64-dbg/tmp/#sql-temptable-5872e-5-0", length = 89}, options={m_options = DDL_options_st::OPT_NONE}, create_info=0x7f29986e5fc8, alter_info=0x7f29986e6e98, create_table_mode=0, is_trans=0x0, key_info=0x7f29986e5c90, key_count=0x7f29986e5c8c, frm=0x7f29986e5c60)at /test/11.8-enterprise-global-tmp_dbg/sql/sql_table.cc:4931
      #16 0x000060191c8ec4a8 in mysql_create_table_no_lock (thd=0x7f2848031398, ddl_log_state_create=0x0, ddl_log_state_rm=0x0, create_info=0x7f29986e5fc8, alter_info=0x7f29986e6e98, is_trans=0x0, create_table_mode=0, table_list=0x7f28480382e8)at /test/11.8-enterprise-global-tmp_dbg/sql/sql_table.cc:5033
      #17 0x000060191c8eeadf in open_global_temporary_table (thd=0x7f2848031398, source=0x7f28dc0014a0, out_table=0x7f28480382e8, mdl_ticket=0x7f28dc000ea0)at /test/11.8-enterprise-global-tmp_dbg/sql/sql_table.cc:6174
      #18 0x000060191c648a3e in open_table (thd=0x7f2848031398, table_list=0x7f28480382e8, ot_ctx=0x7f29986e79d8)at /test/11.8-enterprise-global-tmp_dbg/sql/sql_base.cc:2329
      #19 0x000060191c64e4dd in open_and_process_table (thd=0x7f2848031398, tables=0x7f28480382e8, counter=0x7f29986e7a8c, flags=65537, prelocking_strategy=0x7f29986e7b68, has_prelocking_list=false, ot_ctx=0x7f29986e79d8)at /test/11.8-enterprise-global-tmp_dbg/sql/sql_base.cc:4284
      #20 0x000060191c64d0c4 in open_tables (thd=0x7f2848031398, options=@0x7f2848036cb0: {m_options = (DDL_options_st::OPT_LIKE | DDL_options_st::OPT_OR_REPLACE_SLAVE_GENERATED | DDL_options_st::OPT_CREATE_SELECT | DDL_options_st::OPT_IMPORT_TABLESPACE | unknown: 0xa5a5a401)}, start=0x7f29986e7aa0, counter=0x7f29986e7a8c, flags=65537, prelocking_strategy=0x7f29986e7b68)at /test/11.8-enterprise-global-tmp_dbg/sql/sql_base.cc:4773
      #21 0x000060191c6503dd in open_and_lock_tables (thd=0x7f2848031398, options=@0x7f2848036cb0: {m_options = (DDL_options_st::OPT_LIKE | DDL_options_st::OPT_OR_REPLACE_SLAVE_GENERATED | DDL_options_st::OPT_CREATE_SELECT | DDL_options_st::OPT_IMPORT_TABLESPACE | unknown: 0xa5a5a401)}, tables=0x7f28480382e8, derived=false, flags=65537, prelocking_strategy=0x7f29986e7b68)at /test/11.8-enterprise-global-tmp_dbg/sql/sql_base.cc:5744
      #22 0x000060191c650131 in open_and_lock_tables (thd=0x7f2848031398, tables=0x7f28480382e8, derived=false, flags=65537, prelocking_strategy=0x7f29986e7b68)at /test/11.8-enterprise-global-tmp_dbg/sql/sql_base.h:300
      #23 0x000060191c6500a3 in open_n_lock_single_table (thd=0x7f2848031398, table_l=0x7f28480382e8, lock_type=TL_WRITE_DELAYED, flags=65537, prelocking_strategy=0x7f29986e7b68)at /test/11.8-enterprise-global-tmp_dbg/sql/sql_base.cc:5589
      #24 0x000060191c75cef6 in Delayed_insert::open_and_lock_table (this=0x7f2848031378)at /test/11.8-enterprise-global-tmp_dbg/sql/sql_insert.cc:3369
      #25 0x000060191c75d1d7 in handle_delayed_insert (arg=0x7f2848031378)at /test/11.8-enterprise-global-tmp_dbg/sql/sql_insert.cc:3478
      #26 0x00007f299c89ca94 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
      #27 0x00007f299c929c3c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
      

      And:

      MDEV-35915 CS 12.0.1 21489191d3683c5655afa170533480c86843ecba (Debug, Clang) Build 04/08/2025

      mariadbd: /test/bb-12.0-nikita-global-tmp_dbg/storage/innobase/dict/dict0crea.cc:824: dberr_t dict_create_index_tree_in_mem(dict_index_t *, const trx_t *): Assertion `index->is_readable()' failed.
      

      MDEV-35915 CS 12.0.1 21489191d3683c5655afa170533480c86843ecba (Debug, Clang) Build 04/08/2025

      Core was generated by `/test/MDEV-35915_MD040825-mariadb-12.0.1-linux-x86_64-dbg/bin/mariadbd --no-def'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
       
      [Current thread is 1 (LWP 2445438)]
      (gdb) bt
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
      #1  __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
      #2  __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ./nptl/pthread_kill.c:89
      #3  0x000075b57824526e in __GI_raise (sig=sig@entry=6)at ../sysdeps/posix/raise.c:26
      #4  0x000075b5782288ff in __GI_abort () at ./stdlib/abort.c:79
      #5  0x000075b57822881b in __assert_fail_base (fmt=0x75b5783d01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x64d2339722cb "index->is_readable()", file=file@entry=0x64d233a33b42 "/test/bb-12.0-nikita-global-tmp_dbg/storage/innobase/dict/dict0crea.cc", line=line@entry=824, function=function@entry=0x64d233948aaa "dberr_t dict_create_index_tree_in_mem(dict_index_t *, const trx_t *)") at ./assert/assert.c:94
      #6  0x000075b57823b507 in __assert_fail (assertion=0x64d2339722cb "index->is_readable()", file=0x64d233a33b42 "/test/bb-12.0-nikita-global-tmp_dbg/storage/innobase/dict/dict0crea.cc", line=824, function=0x64d233948aaa "dberr_t dict_create_index_tree_in_mem(dict_index_t *, const trx_t *)") at ./assert/assert.c:103
      #7  0x000064d234d00e3c in dict_create_index_tree_in_mem (index=0x75b44400e2e8, trx=0x75b575802180)at /test/bb-12.0-nikita-global-tmp_dbg/storage/innobase/dict/dict0crea.cc:824
      #8  0x000064d234ed63ef in row_create_index_for_mysql (index=0x75b44400e2e8, trx=0x75b575802180, field_lengths=0x0, mode=FIL_ENCRYPTION_DEFAULT, key_id=1)at /test/bb-12.0-nikita-global-tmp_dbg/storage/innobase/row/row0mysql.cc:2183
      #9  0x000064d234b2747c in create_table_info_t::create_table (this=0x75b574653ab8, create_fk=true, strict=true)at /test/bb-12.0-nikita-global-tmp_dbg/storage/innobase/handler/ha_innodb.cc:12793
      #10 0x000064d234b1353d in ha_innobase::create (this=0x75b44400b6c8, name=0x75b574656cd0 "/test/MDEV-35915_MD040825-mariadb-12.0.1-linux-x86_64-dbg/tmp/#sql-temptable-2549bd-5-0", form=0x75b574654258, create_info=0x75b574656fc0, file_per_table=true, trx=0x75b575802180)at /test/bb-12.0-nikita-global-tmp_dbg/storage/innobase/handler/ha_innodb.cc:13284
      #11 0x000064d234b28957 in ha_innobase::create (this=0x75b44400b6c8, name=0x75b574656cd0 "/test/MDEV-35915_MD040825-mariadb-12.0.1-linux-x86_64-dbg/tmp/#sql-temptable-2549bd-5-0", form=0x75b574654258, create_info=0x75b574656fc0)at /test/bb-12.0-nikita-global-tmp_dbg/storage/innobase/handler/ha_innodb.cc:13337
      #12 0x000064d23413e96d in handler::ha_create (this=0x75b44400b6c8, name=0x75b574656cd0 "/test/MDEV-35915_MD040825-mariadb-12.0.1-linux-x86_64-dbg/tmp/#sql-temptable-2549bd-5-0", form=0x75b574654258, info_arg=0x75b574656fc0)at /test/bb-12.0-nikita-global-tmp_dbg/sql/handler.cc:5972
      #13 0x000064d234140a8f in ha_create_table_from_share (thd=0x75b448031408, share=0x75b5746555f0, create_info=0x75b574656fc0, ref_length=0x75b574654744)at /test/bb-12.0-nikita-global-tmp_dbg/sql/handler.cc:6424
      #14 0x000064d23414036d in ha_create_table (thd=0x75b448031408, path=0x75b574656cd0 "/test/MDEV-35915_MD040825-mariadb-12.0.1-linux-x86_64-dbg/tmp/#sql-temptable-2549bd-5-0", db=0x75b44802beb8 "test", table_name=0x75b448015a68 "t", create_info=0x75b574656fc0, frm=0x75b574656c60, skip_frm_file=false)at /test/bb-12.0-nikita-global-tmp_dbg/sql/handler.cc:6491
      #15 0x000064d234707455 in create_table_impl (thd=0x75b448031408, ddl_log_state_create=0x0, ddl_log_state_rm=0x0, orig_db=@0x75b448038420: {<Lex_ident_fs> = {<Lex_ident<Compare_table_names>> = {<Lex_cstring> = {<st_mysql_const_lex_string> = {str = 0x75b44802beb8 "test", length = 4}, <No data fields>}, <No data fields>}, <No data fields>}, <No data fields>}, orig_table_name=@0x75b448038430: {<Lex_ident_fs> = {<Lex_ident<Compare_table_names>> = {<Lex_cstring> = {<st_mysql_const_lex_string> = {str = 0x75b448015a68 "t", length = 1}, <No data fields>}, <No data fields>}, <No data fields>}, <No data fields>}, db=@0x75b448038420: {str = 0x75b44802beb8 "test", length = 4}, table_name=@0x75b448038430: {str = 0x75b448015a68 "t", length = 1}, path=@0x75b574656c48: {str = 0x75b574656cd0 "/test/MDEV-35915_MD040825-mariadb-12.0.1-linux-x86_64-dbg/tmp/#sql-temptable-2549bd-5-0", length = 87}, options={m_options = DDL_options_st::OPT_NONE}, create_info=0x75b574656fc0, alter_info=0x75b574657e90, create_table_mode=0, is_trans=0x0, key_info=0x75b574656c90, key_count=0x75b574656c8c, frm=0x75b574656c60)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_table.cc:4937
      #16 0x000064d234706538 in mysql_create_table_no_lock (thd=0x75b448031408, ddl_log_state_create=0x0, ddl_log_state_rm=0x0, create_info=0x75b574656fc0, alter_info=0x75b574657e90, is_trans=0x0, create_table_mode=0, table_list=0x75b448038408)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_table.cc:5039
      #17 0x000064d234708b7f in open_global_temporary_table (thd=0x75b448031408, source=0x75b4440014a0, out_table=0x75b448038408, mdl_ticket=0x75b444000e50)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_table.cc:6194
      #18 0x000064d23445429e in open_table (thd=0x75b448031408, table_list=0x75b448038408, ot_ctx=0x75b5746589d8)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_base.cc:2330
      #19 0x000064d234459d2d in open_and_process_table (thd=0x75b448031408, tables=0x75b448038408, counter=0x75b574658a8c, flags=65537, prelocking_strategy=0x75b574658b68, has_prelocking_list=false, ot_ctx=0x75b5746589d8)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_base.cc:4285
      #20 0x000064d234458904 in open_tables (thd=0x75b448031408, options=@0x75b448036ddc: {m_options = (DDL_options_st::OPT_LIKE | DDL_options_st::OPT_OR_REPLACE_SLAVE_GENERATED | DDL_options_st::OPT_CREATE_SELECT | DDL_options_st::OPT_IMPORT_TABLESPACE | unknown: 0xa5a5a401)}, start=0x75b574658aa0, counter=0x75b574658a8c, flags=65537, prelocking_strategy=0x75b574658b68)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_base.cc:4771
      #21 0x000064d23445bc9d in open_and_lock_tables (thd=0x75b448031408, options=@0x75b448036ddc: {m_options = (DDL_options_st::OPT_LIKE | DDL_options_st::OPT_OR_REPLACE_SLAVE_GENERATED | DDL_options_st::OPT_CREATE_SELECT | DDL_options_st::OPT_IMPORT_TABLESPACE | unknown: 0xa5a5a401)}, tables=0x75b448038408, derived=false, flags=65537, prelocking_strategy=0x75b574658b68)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_base.cc:5759
      #22 0x000064d23445b9f1 in open_and_lock_tables (thd=0x75b448031408, tables=0x75b448038408, derived=false, flags=65537, prelocking_strategy=0x75b574658b68)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_base.h:295
      #23 0x000064d23445b963 in open_n_lock_single_table (thd=0x75b448031408, table_l=0x75b448038408, lock_type=TL_WRITE_DELAYED, flags=65537, prelocking_strategy=0x75b574658b68)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_base.cc:5604
      #24 0x000064d23456a856 in Delayed_insert::open_and_lock_table (this=0x75b4480313e8)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_insert.cc:3388
      #25 0x000064d23456ab37 in handle_delayed_insert (arg=0x75b4480313e8)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_insert.cc:3497
      #26 0x000075b57829ca94 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
      #27 0x000075b578329c3c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
      

      UBASAN builds, including debug, are also (and oddly) not affected.

      Attachments

        Issue Links

          Activity

            People

              nikitamalyavin Nikita Malyavin
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d 3h 25m
                  2d 3h 25m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.